update posts and config

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,8 +1,15 @@
 ---
 title: "Page Not Found"
-excerpt: "Page not found. Your pixels are in another canvas."
+excerpt: "Your pixels are in another canvas."
 sitemap: false
 permalink: /404.html
+header:
+  overlay_image: /assets/images/como_lake2.jpeg
+  overlay_filter: 0.25
+  caption: "Searching for meaning, lake Como"
+  actions:
+    - label: "Also known as 404"
+      url: #"https://birdlife.org.au/bird-profiles/"
 ---
 
 Sorry, but the page you were trying to view does not exist.
