--- a/_pages/404.md
+++ b/_pages/404.md
@@ -6,10 +6,11 @@ permalink: /404.html
 header:
   overlay_image: /assets/images/como_lake2.jpeg
   overlay_filter: 0.15
-  caption: "Searching for meaning, lake Como"
+  caption: "Searching for meaning, Lake Como"
   actions:
     - label: "Also known as 404"
-      url: #"https://birdlife.org.au/bird-profiles/"
+      url: "https://fannychini.github.io/"
 ---
 
 Sorry, but the page you were trying to view does not exist.
+Perhaps you found an [Easter Egg](https://en.wikipedia.org/wiki/Easter_egg_(media)).
